# ChangeLog for x11-misc/lightdm-gtk-greeter
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-misc/lightdm-gtk-greeter/ChangeLog,v 1.3 2012/02/19 23:11:04 hwoarang Exp $

  19 Feb 2012; Markos Chandras <hwoarang@gentoo.org>
  lightdm-gtk-greeter-1.1.4.ebuild:
  Fix installed location for lightdm-gtk-greeter config file when branding is
  enabled

  18 Feb 2012; Markos Chandras <hwoarang@gentoo.org>
  lightdm-gtk-greeter-1.1.4.ebuild:
  Add missing .conf extension when branding is enabled

*lightdm-gtk-greeter-1.1.4 (18 Feb 2012)

  18 Feb 2012; Markos Chandras <hwoarang@gentoo.org>
  +lightdm-gtk-greeter-1.1.4.ebuild, +metadata.xml:
  Initial commit for lightdm-gtk-greeter. Thanks to Ben Kohler
  <bkohler@gmail.com> for the ebuild. Bug #399719
