@@ -3,23 +3,23 @@ Hash: SHA512
 
 DIST lightdm-gentoo-patch.tar.gz 101983 RMD160 6463f6d96b635922ac0f060fbffe450caaec6a74 SHA1 63348e477bffa27c82839c74fe56d3bc4565a3b1 SHA256 2e56d0ef3926428cea7870fbade77b20bd05a7664ae301aacc56504e07cf39ba
 DIST lightdm-gtk-greeter-1.1.4.tar.gz 364620 RMD160 1ae4632d9c84384197b012a338154535b9722067 SHA1 87e1ed5057852785fe18e322f7ee0595ac8e0847 SHA256 e543d79c77337123b09a12828d03fce30359fafe057f15a35e49b62bebc21b53
-EBUILD lightdm-gtk-greeter-1.1.4.ebuild 1044 RMD160 ae61a68b3edf68f3a48d139f7b2fe02b293702d1 SHA1 1dd91312e0f78c7a75a19b1b8f322ba38d1d629d SHA256 29a0332fd5a259f90654a7f70ad261942f4e49fc0c326f5d2be3716d75f9ffd0
-MISC ChangeLog 815 RMD160 2c771d052043436d6ed386d39a856c40fab0d532 SHA1 38bbd30ff5cac09e299d08235bdd9dda562b86a1 SHA256 34f19a5cea9decbda4edc99d786b92eb7a902eb559017a42fef9252267af5b5a
+EBUILD lightdm-gtk-greeter-1.1.4-r1.ebuild 1345 RMD160 02f9218649cca1203c31178478529d19e4efeb21 SHA1 b2c95ee818ba9e38456c06ea75e9410806b04fd4 SHA256 0c3763e415386b275793f896909e19ea85b628ad9d640116c50c19ff8d8d1904
+MISC ChangeLog 1037 RMD160 451b0f37988748de6f3787074311bca6e6c5b867 SHA1 19b51d48f00e1e99bdca81483c94fff2474c7562 SHA256 b56cc0e2885a77263bf076ff6662369b871e3f85ed9d3b31248e57b4bc451523
 MISC metadata.xml 278 RMD160 85ae612f4b725d8857a7fe0808090691c0e58fbd SHA1 c97840692a46e7d54f22bfcfd0a564a8d08033dd SHA256 07a0afc4dfc12865b213ef6815169e0524357989b213ac40bc9436dea94c3160
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.18 (GNU/Linux)
 
-iQIcBAEBCgAGBQJPQYGFAAoJEPqDWhW0r/LCsRoP/RU1/Jk+/pZUzDJI00OebL7n
-xUFdOmn9fs53eduMgBX0dq5cqlo33bUqRglUDUctA+dyMHAOZVqF4HUekU2V5eli
-GTHAmNNhomzrKJNgCMeGU9fGg00QHnqUjETpBNvg2mekZz4s0jM0cNKsePZaAILF
-vuHY2GlFSuW90w4KsriE/Q4yicAPNd3LlrRM3j3b7AfQ6GIzOnbbuIiJLRVafsh0
-ie3f7PvlXPdyrUFzoSbhCOf0blXrZ/dhatiPjdQ34MHbSu8bpfbhk0OePQvdBdmi
-kIV0Iia68WG2o3AtfWMgr0/Koq+PjEOPIAvThwka+AcCCgVlH+3BukhwOREAopCW
-fqmqrrUIROTwmIvM7GM2nZpWsiUEHbQbAqVQG2+nfVxeCdvrCoh4LPWbOvEssuhn
-ypcy2eHudsDXSOQryigzSuGO+QIA6BQAa11RiaZKk7TgSxWdoUrYRi4RZyWfqC9e
-xWvUZg+weHnOpJlkUn80/sQwnppBXLILXBzvHolGIsOZihTXjP+BARLa1mFt1/GC
-rWETbOpUT7ABMVUBgwXbae9pdLw+Ad1aiQ8zPjsQOlxKnxJoip3n72Cbn4XkHyVV
-8STwz9kpeFT29tWF9vFuAC2M3wFA8akMdg4838DgOY4A0RUeJ/Mgw/0qtl7b04ej
-M464qDggu71iKtg7Dwll
-=zEPJ
+iQIcBAEBCgAGBQJPRs+DAAoJEPqDWhW0r/LC5cMP/102CtlrdNrZZG11fNF53mTn
+SCcagqlBdOjC8FLrBADts6Q6k3HsqRv00dBUUmAt8bX1hA/bAESvhQqxBxzfl9Pd
+5xhmDxYE1oTH/UKtqPEX5m7Uy2nTmouLornHsGg8vVACcviKqc/UdFE3BxZlyuqI
+eZA9yhV9NIRkxlT8OnmoJimoKEVUyHs1MEiLaB7108zZNOOVfzrDFY8/px026Rqr
+IaHBo7aCknLrEi1IIUzfPH59zG/NSV18tBql7ysxx9GLEpqmVHeyWb64S0hzbKJD
+IdseWs2Gz4asZfNDFDIm8tQZRBDvHMkwLd1tYxlmpl3Y494Ocq1itk7pSu8XpDQs
+wX/l5bVqgXzB7mGaO5jnVlHDw98WthMf3wB9fWl5S0LKhyXaqnvFaU+6kENAcCOI
+bwvG3WvQppW/cDpeZRCPYa2AMmkSFhPt2MRUNMPOcdhujjSZZZSnZSCKNav6KXaw
+ulmIZE3VnRtJMGKxX3CRIh1r7yp7qWG9BGwPD9EIyOuU8pxhWOYAS4Udmcdpmru6
+lujtID9hsqd1TgEsy8fFdE5/dow6+knhC+ObG7FvRnRWd1bd/7DDIl8AmiZI8L1v
+QDS80PbRsFCjTFozct/IhljKIDTykA9tbShxCGxqs+yFlk3ata3FZcUY1BHFD9rP
+nQKGlirvJqhvI8nuY5K7
+=kZQI
 -----END PGP SIGNATURE-----
