@@ -1,6 +1,12 @@
 # ChangeLog for x11-misc/lightdm-gtk-greeter
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/lightdm-gtk-greeter/ChangeLog,v 1.3 2012/02/19 23:11:04 hwoarang Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/lightdm-gtk-greeter/ChangeLog,v 1.4 2012/02/23 23:45:00 hwoarang Exp $
+
+*lightdm-gtk-greeter-1.1.4-r1 (23 Feb 2012)
+
+  23 Feb 2012; Markos Chandras <hwoarang@gentoo.org>
+  +lightdm-gtk-greeter-1.1.4-r1.ebuild, -lightdm-gtk-greeter-1.1.4.ebuild:
+  Fix typo in Gentoo's gtk greeter. Bug #404467
 
   19 Feb 2012; Markos Chandras <hwoarang@gentoo.org>
   lightdm-gtk-greeter-1.1.4.ebuild:
